--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="Dungtd_bot" data-size="large" data-auth-url="https://192a-118-68-49-241.ngrok-free.app/api/telegram-auth/" data-request-access="write"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="Dungtd_bot" data-size="large" data-auth-url="https://0ac4-42-118-31-159.ngrok-free.app/api/telegram-auth/" data-request-access="write"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
